--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=cnms_26032023_db
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=OZYdzx15146
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
