--- a/.env
+++ b/.env
@@ -2,14 +2,14 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:F+88BdVbq9i02i3yVxGXSdycIMx8cJl2UpM+uc108hY=
 APP_DEBUG=true
-APP_URL=http://env-3419718.cslox-th.ruk-com.la/
+APP_URL=https://node49149-env-3419718.cslox-th.ruk-com.la
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=https://node49149-env-3419718.cslox-th.ruk-com.la/
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=cnms_26032023_db
 DB_USERNAME=root
