--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:F+88BdVbq9i02i3yVxGXSdycIMx8cJl2UpM+uc108hY=
 APP_DEBUG=true
-APP_URL=https://app.manage.ruk-com.la/
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
