--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
-## Redirect to public folder
 <IfModule mod_rewrite.c>
-    RewriteEngine on
-    RewriteRule ^$ public/index.php [L]
-    RewriteRule (.*) public/$1 [L]
+    RewriteEngine On
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^(.*)$ index.php/$1 [L]
 </IfModule>
