--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,4 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ index.php/$1 [L]
+    RewriteRule ^(.*)$ public/$1 [L]
 </IfModule>
