--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
-    RewriteRule ^(.*)$ ROOT/public/index.php $1 [L]
+    RewriteRule ^ /ROOT/public/index.php [L]
 </IfModule>
