--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:F+88BdVbq9i02i3yVxGXSdycIMx8cJl2UpM+uc108hY=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://env-3419718.cslox-th.ruk-com.la/
 
 LOG_CHANNEL=stack
