--- a/.env
+++ b/.env
@@ -9,12 +9,13 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=https://node49149-env-3419718.cslox-th.ruk-com.la/
+DB_HOST=127.0.0.1
+# DB_HOST=https://node49149-env-3419718.cslox-th.ruk-com.la/
 DB_PORT=3306
 DB_DATABASE=cnms_26032023_db
 DB_USERNAME=root
-DB_PASSWORD=OZYdzx15146
-
+DB_PASSWORD=
+# DB_PASSWORD=OZYdzx15146
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
