this is new update api for change order

--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=cnms_26032023_db
 DB_USERNAME=root
-DB_PASSWORD=
-# DB_PASSWORD=OZYdzx15146
+# DB_PASSWORD=
+DB_PASSWORD=OZYdzx15146
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
