--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-DB_HOST=https://node49149-env-3419718.cslox-th.ruk-com.la/
+DB_HOST=localhost
+# DB_HOST=https://node49149-env-3419718.cslox-th.ruk-com.la/
 DB_PORT=3306
 DB_DATABASE=cnms_26032023_db
 DB_USERNAME=root
